--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1109,6 +1109,9 @@
  SAU_saudi_arabia_democratic_ADJ:0 "Arabian"
  SAU_saudi_arabia_neutrality_ADJ:0 "Saudi Arabian"
  SAU_saudi_arabia_fascism_ADJ:0 "Arabic"
+ SAU_imamate: "Imamate of Nejd"
+ SAU_imamate_DEF: "the Imamate of Nejd"
+ SAU_imamate_ADJ: "Nejdi"
  NIR_never_never_never_democratic:0 "Kingdom of Ireland"
  NIR_never_never_never_democratic_DEF:0 "the Kingdom of Ireland"
  NIR_never_never_never_democratic_ADJ:0 "Irish"
