--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8283,7 +8283,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_give_in_TUR:0 "Give in to the [FROM.GetAdjective]s"
  SAU_give_in_TUR_desc:0 "The British are not in a position to intervene and save us from the Ottoman threat of war. Now is the time to contact the Ottomans before it's too late."
  SAU_Egypt_friend: "§nRelations with Egypt will not be severed!§!"
- SAU_Egypt_enemy: "§vRelations with Egypt will be severed!§!"
+ SAU_Egypt_enemy: "§RRelations with Egypt will be severed!§!"
  SAU_Foreign_relations: "Foreign Relations Department"
  SAU_Egyptian_adv_tt: "§YUnlocks Egyptian Advisors!§!"
  SAU_Iraqi_adv_tt: "§YUnlocks Iraqi Advisors!§!"
@@ -8294,7 +8294,17 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_Hejazi_opposition: "Hejazi Opposition"
  Zainal_Company: "Zainal Company"
  SAU_anglo_persian_oil_company: "Anglo-Persian Oil Company"
- 
+ SAU_BOP_START: "Start of Power Balance"
+ SAU_BOP_OVER: "End of Power Balance"
+ SAU_Abdulrahman_returns_flag: "Abdulrahman Returns"
+ SAU_Ikhwani_state: "Ikhwani State"
+ SAU_Yanks_chosen: "Americans has been Chosen"
+ SAU_Brits_chosen: "The British has been Chosen"
+ SAU_Reform_victory: "Reformist Victory"
+ SAU_Autocracy_victory: "Autocratic Victory"
+ Saudi_Egyptian_incident: "Saudi Egyptian Incident"
+ SAU_EGY_Sorry: "Apologized to Egypt"
+ SAU_EGY_NOT_Sorry: "Didn't Apologize to Egypt"
  JBS_state_core:0 "Core [FROM.GetName]"
  
  QAT_ask_for_british_protection:0 "Ask for British Protection"
