--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13302,6 +13302,23 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_nejd.37.a: "The Americans are experienced"
  ww1_nejd.37.b: "But the British has more experience"
 
+ ww1_nejd.38.t: "Egypt Cut ties with Saudi Arabia"
+ ww1_nejd.38.d: "King Abdulaziz refused to apologize to Egypt and did not allow the Mahmal to enter Mecca. As a result, the Egyptian government decided to cut all ties with Saudi Arabia, except in matters related to Hajj."
+ ww1_nejd.38.a: "Really?"
+ ww1_nejd.38.b: "Good Riddance"
+
+ ww1_nejd.39.t: "Egyptian-Saudi Relations Rekindle"
+ ww1_nejd.39.d: "King Abdulaziz apologized to Egypt and allowed the Mahmal to enter Mecca. As a result, the Egyptian government invited King Abdulaziz to visit Egypt and offered to send aid, teachers, and medical doctors to support the Saudi state."
+ ww1_nejd.39.a: "Really!"
+ ww1_nejd.39.b: "Jolly Times"
+
+ ww1_nejd.40.t: "Abdulrahman Returns to Governing"
+ ww1_nejd.40.d: "After disputes within the family, the former Emir of Al Saud, Abdulrahman, father of Emir Abdulaziz, who had initially refused to retake his position after the reemergence of the Saudi State and had handed power to his son, decided to return and lead the state in the fundamentalist ways of old after his son failed to resolve family disputes."
+ ww1_nejd.40.a: "Allah Akbar"
+
+ ww1_nejd.41.t: "The Ikhwan Takeover the State"
+ ww1_nejd.41.d: "The reforms implemented by Abdulaziz did not sit well with the Ikhwan. The final blow came when he decided to dissolve their organization. In response, Faisal Al Dawish and Sultan bin Bajad led the Ikhwan in a swift and decisive insurgency, ultimately seizing control of the state."
+ ww1_nejd.41.a: "Allah Akbar"
  # AZERBAIJAN
  ww1_azerbaijan.1.t: "Baku Commune"
  ww1_azerbaijan.1.d: "Bolshevik and Left Socialist Revolutionary (SR) established the commune in the city of Baku. It came to power after the bloody confrontation with the Muslim population, known as the [GetMonth] Days in Baku."
