--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10447,8 +10447,8 @@ FRA_coalition_crash:0 "The §YCartel des Gauches§! Coalition breaks up, causing
  SAU_conquest_of_hejaz: "Conquest of Hejaz"
  SAU_search_for_oil_companies: "Foreign Oil Companies"
  SAU_holy_cities: "Holy Cities"
- SAU_apologize_to_egypt: "Apologize to Egypt"
- SAU_defend_ikhwan: "Defened the Ikhwan"
+ SAU_apologize_to_egypt: "Egyptian Aid Relief"
+ SAU_defend_ikhwan: "Cut Ties with Egypt"
  SAU_renovate_mecca_area: "Renovate Mecca Area"
  SAU_need_for_reform: "The Need for Reform"
  SAU_egyptian_advisors: "Invite Egyptian Advisors"
