--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3007,19 +3007,26 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  SAU_Horsemanship: "Horsemanship"
  SAU_modern_taxes: "Modern Taxation"
  SAU_modern_taxes2: "Accounting Division"
+ SAU_egyptian_relief_centers_idea: "Egyptian Aid"
  SAU_Restricted_Advising: "Advisors Restricted"
  SAU_zakat: "Zakat"
  SAU_food_imports: "Food Imports"
+ SAU_pilgram_tax: "Pilgrams Tax"
  SAU_Sharia_Law: "Sharaia Law"
  SAU_Legal_Code: "Legal Code"
  SAU_Modern_Trade_Routes: "Modern Routes"
  SAU_Old_Trade_Routes: "Old Routes"
  SAU_Modern_Army: "Modern Army"
+ SAU_Abdulrahman_figurehead: "Abdulrahman Al Saud"
  SAU_Tribal_Tradition: "Tribal Tradition"
  SAU_Urban_State: "Urban State"
  SAU_city_tax_idea: "Urban Tax"
  SAU_mesopotamia_raid: "Mesopotamia Raid"
  SAU_jordan_raid: "Jordan Raid"
+ 
+
+
+
  MOR_guerilla_warfare:0 "Guerrila Warfare"
 
  #Malaysia
