--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2802,7 +2802,7 @@ RAJ_imperial_bank_of_india_trait:0 "Central Bank"
 RAJ_imperial_bank_of_india_mio:0 "Imperial Bank of India"
  RAJ_national_spirit_remove:0 "§RThis National Spirit will be removed once we're at peace.§!"
 unlock_imperial_bank_of_india.tt:0 "Unlocks §YIndustrial Concern§!: §YImperial Bank of India§!"
-
+RAJ_factory_act_idea:0 "Indian Factories Act"
  RAJ_idea_independence_war:0 "Independence War"
  
  RAJ_deindustrialisation_dynamic:0 "De-Industrialisation"
