--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -268,8 +268,14 @@
  RUS_great_army_programme: "Great Army Programme"
  RUS_censor_liberal_press: "Censor Liberal Press"
  RUS_put_a_leash_on_okhranka: "Put a Leash on Okhranka"
- RUS_increase_police_budget: "Increase Police Budget"
+ RUS_balanced_budget: "Balanced Budget"
+ RUS_not_us_and_them: "Not "Us" and "Them""
+ RUS_maklakovs_plan: "Maklakov's Plan"
+ RUS_fate_of_the_kokovtsov: "Fate of Kokovtsov"
+ RUS_new_course: "New Course"
+ RUS_drastic_measures: "Drastic Measures"
  RUS_complete_police_reform: "Complete Police Reform"
+ RUS_railroad_expansion: "Railroad Expansion"
  RUS_anti_alcohol_campaign: "Anti-Alcohol Campaign"
  RUS_income_tax: "Income Tax"
  RUS_progressive_taxation: "Progressive Taxation"
