--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8364,7 +8364,14 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  NEP_war_with_SKK:0 "Invade [FROM.GetName]"
 
  # RAJ DECISION
+RAJ_agencies_viceroy_executive_council:0 "Agencies vs Viceroy Execuive Council "
 
+
+
+RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council decisions"
+RAJ_viceroy_executive_council_category_desc:0 "Write or be raped"
+RAJ_you_can_repel.tt:0 "Taking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision"
+RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
  organized_pacifism_category:0 "Organised Pacifism"
  organise_a_peaceful_protest_in_delhi:0 "Organise a Peaceful Protest in Delhi"
  organise_a_peaceful_protest_in_east_bengal:0 "Organise a Peaceful Protest in East Bengal"
