--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -29,6 +29,7 @@
  RUS_likely_to_pass: "§GThe law is likely to pass§!"
  RUS_likely_to_be_rejected: "§RThe law is likely to be rejected§!"
  RUS_modify_state_council_tt: "Shifts §YFaction Balance§! to the [RUS_which_side_modify]"
+ RUS_modify_state_council_big_tt: "Significantly shifts §YFaction Balance§! to the [RUS_which_side_modify]"
  RUS_left_side_tt: "§rLeft.§!"
  RUS_right_side_tt: "§qRight.§!"
  RUS_cant_shift_100_tt: "You can shift until §Yhuge level§! of right-wing power."
