RAJ Focus tree loc and Tooltip UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10426,16 +10426,19 @@ RAJ_the_question_of_natal:0 "The Question of Natal"
 RAJ_the_question_of_natal_desc:0 ""
 RAJ_organized_pacifism:0 "Organised Pacifism"
 RAJ_organized_pacifism_desc:0 ""
+RAJ_organized_pacifism_reward:0 "Unlock the £GFX_decision_icon_small §YOrganised Pacifism§! decisions."
 RAJ_best_and_brightest_of_the_congress:0 "Best and Brightest of the Congress"
 RAJ_best_and_brightest_of_the_congress_desc:0 ""
 RAJ_the_irish_connection:0 "The Irish Connection"
 RAJ_the_irish_connection_desc:0 ""
 RAJ_boycott_british_goods:0 "Boycott British Goods"
 RAJ_boycott_british_goods_desc:0 ""
+RAJ_boycott_british_goods_reward:0 "We will launch a §YBoycott Campaign§! against British goods. London will then have to choose between §Ygiving in to our demands or ignoring them§!, the latter of which will §Rseverely damage their economy§!."
+
 RAJ_reformism:0 "Reformism"
-RAJ_reformism_desc:0 ""
+RAJ_reformism_desc:0 "As a result of the success of our boycott campaign, the British have finally caved in to our demands. A series of reforms have been passed by the British Parliament, allowing for greater representation of elected officials within the legislative framework."
 RAJ_appease_the_radicals:0 "Appease the Radicals"
-RAJ_appease_the_radicals_desc:0 ""
+RAJ_appease_the_radicals_desc:0 "Having used the Swadeshi tactics of the radicals within the Congress and gained significant reforms from the British, we are in a position to reintegrate Tilak and his clique within the Indian National Congress."
 RAJ_reconciliate_with_the_muslim_league:0 "Reconciliate with the Muslim League"
 RAJ_reconciliate_with_the_muslim_league_desc:0 ""
 RAJ_home_rule_movement:0 "Home Rule Movement"
