--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8364,10 +8364,19 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  NEP_war_with_SKK:0 "Invade [FROM.GetName]"
 
  # RAJ DECISION
-RAJ_agencies_viceroy_executive_council:0 "Agencies vs Viceroy Execuive Council "
-
-
-
+RAJ_agencies_viceroy_executive_council:0 "Agencies vs Central Government "
+RAJ_agency_vs_viceroy:0 "Agencies vs Central Government"
+RAJ_balance_agencies:0 "Agencies"
+RAJ_balance_bop:0 "Balanced"
+ RAJ_agency:0 "Agency"
+heavy_agency:0 "Heavy Agency"
+agency_medium:0 "Agency Medium"
+agency_low:0 "Agency Low"
+viceroy_executive_council_high:0 "Central Government High"
+viceroy_executive_council_medium:0 "Central Government Medium"
+viceroy_executive_council_low:0 "Central Government Low"
+RAJ_princely_state_agency:0 "Princely States Agencies"
+ RAJ_balance_viceroy_executive_council:0 "Viceroy Executive Council"
 RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council decisions"
 RAJ_viceroy_executive_council_category_desc:0 "Write or be raped"
 RAJ_you_can_repel.tt:0 "Taking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision"
