Eemil Nestor Setälä by Artyom

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1159,6 +1159,7 @@
  FIN_ali_aaltonen:0 "Ali Aaltonen"
  FIN_verner_lehtimaki:0 "Verner Lehtimäki"
  FIN_august_wesley:0 "August Wesley"
+ FIN_emil_nestor_setala:0 "Eemil Nestor Setälä"
 
  # FRANCE
  FRA_raymond_poincare:0 "Raymond Poincaré"
