a lot more work

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -7764,10 +7764,10 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_germany.150.t:0 "Rapprochement with the Germans?"
  ww1_germany.150.d:0 "The German government has made their priority to restore German prestige and rights as one of the European countries. They now reflect on their past mistakes and want to become members of our international society that seek peace. With our permission, they will no longer claim the lost imperial territories of the past and join the League of Nations."
  ww1_germany.150.a:0 "The Peace of Versailles blossoms."
- ww1_germany.151.t:0 "[FROM.GetName] Requests the Docking Rights"
- ww1_germany.151.d:0 "[FROM.GetAdjective] government requests to be guaranteed the docking rights for the [ROOT.GetAdjective] ports to their naval vessels."
- ww1_germany.151.a:0 "Sure."
- ww1_germany.151.b:0 "No?"
+ ww1_germany.151.t:0 "Secret Alliance with [FROM.GetName]"
+ ww1_germany.151.d:0 "Our relations with [FROM.GetName] has been steadily growing. As the world seems to be going down in the path of a great war, perhaps it'd be wise for us to form a secret alliance with the [FROM.GetAdjective]s."
+ ww1_germany.151.a:0 "It's important to have protection."
+ ww1_germany.151.b:0 "We can't compromise on our neutrality."
  ww1_germany.152.t:0 "New Colonial Administration of Ostasien"
  ww1_germany.152.d:0 "We have succeeded in obtaining over the fruitful East Asian colonies that the French and the colonialists on their side have built. It is clear that the resources and gaining wealth that come from there shall bring glory to the Empire."
  ww1_germany.152.a:0 "Our another place in the Sun!"
