--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4788,6 +4788,7 @@
  TUR_endorse_agricultural_economic_model_desc:0 "In contrast to European industrial powerhouses, our empire still predominantly an agrarian state. Instead of disregarding our agrarian base, we can focus and benefit from it."
  TUR_land_distribution:0 "Land Distribution"
  TUR_land_distribution_desc:0 "Current system of land owners, known as ağas, hard our peasantry and the usage of land. Through distributing these lands to those who're working the soil, we can achieve greater profit."
+ TUR_land_distribution_tt:0 "Modify §YAgrarian Economy§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-5.0%§!\n£civ_factory  Max Factories in a State: §G+15%§!\n"
  TUR_encourage_private_economic_participation:0 "Encourage Private Economic Participation"
  TUR_encourage_private_economic_participation_desc:0 "Liberalism cannot achieved through foreign investments on its own. We have to let state take a back step in order for individuals to participate in the economy."
  TUR_expand_trade_ports:0 "Expand Trade Ports"
@@ -4810,9 +4811,10 @@
  TUR_agricultural_obligation_law_desc:0 "Though we need soldiers on the ground, the war is stretching our resources. As large cities are starving, grain supply stays all time low. To solve the scarcity of grain, we'll force those who're not in the army to work on the fields, and increase grain production."
  TUR_forming_national_supply_connections:0 "Forming National Supply Connections"
  TUR_forming_national_supply_connections_desc:0 "Large cities still remain rather disconnected from food supplies, while the army is unable to get its equipments. By selecting a set of Turkish merchants that's close to the party, we can designate them to deliver goods and necessary materials to wherever needed."
- TUR_forming_national_supply_connections_tt:0 "Decision §YUtilize Anatolian Grain§! can be selected for §Y3§! times without any requirements."
+ TUR_forming_national_supply_connections_tt:0 "Modify §YNational Economy§! by\n£sabotaged_resource_texticon  Lack of Resources Penalty: §G-15.00%§!\n£supply_texticon  Supply Range: §G+10%§!\n£construction_speed_infrastructure_texticon  §YInfrastructure§! construction speed: §G+5.00%§!\n\nDecision §YUtilize Anatolian Grain§! can be selected for §Y3§! times without any requirements."
  TUR_establish_turkish_monopolies:0 "Establish Turkish Monopolies"
  TUR_establish_turkish_monopolies_desc:0 "Minorities and foreigners still share a large holding in our economy. As war wages on, we can use it as an excuse to promote laws that favor Turks over others, and create a monopoly over the production."
+ TUR_establish_turkish_monopolies_tt:0 "Modify §YNational Economy§! by\n£construction_speed_texticon  Construction Speed: §G+5.00%§!\n£prod_eff_cap  Production Efficiency Cap: §G+5.00%§!\n\n"
  TUR_debt_responsibility:0 "Debt Responsibility"
  TUR_debt_responsibility_desc:0 "Previously to the declaration of the Second Constitutional Era, irrisponsible Sultans of our empire made lavish expenditures. This has diminished the trust of the Western debt givers. By showing we're capable of paying our debts, we'll be able to get some part of our finances back to our control."
  TUR_debt_responsibility_tt:0 "Modify §YOttoman Public Debt Administration§! by\nDaily Political Power Cost §G-0.05§!\n\n"
@@ -4941,6 +4943,7 @@
  has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§! present within the state"
  has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§! present within the state"
  has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§! present within the state"
+ TUR_healing_the_sick_man_tt:0 "Has national spirit §YSick Man of Europe§!"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
