--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -971,8 +971,6 @@
  TUR_OPDA_idea:0 "Ottoman Public Debt Administration"
  TUR_OPD_idea:0 "Ottoman Public Debt"
  TUR_OPD_idea_desc:0 "After years of foreign domination of our economy, we were finally able to nationalize the Ottoman Public Debt Administration, effectively regaining financial control over our economy with only foreign debts left to pay."
- TUR_ottoman_credit_national_bank:0 "Ottoman Credit National Bank"
- TUR_ottoman_credit_national_bank_desc:0 "Among mostly foreign owned or controlled bank, Osmanlı İtibar-ı Milli Bankası stands as the first national bank that's working for the interests of our nation."
  TUR_OPDA_foreign_power:0 "£pol_idea Ottoman Public Debt Administration"
  TUR_OPDA_TOOLTIP1:0 "£political_power_cost_texticon  Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-10%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§!\n£civilian_intel_texticon  Civilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
  TUR_OPDA_TOOLTIP2:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-10%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§!\n£civilian_intel_texticon  Civilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
@@ -988,6 +986,24 @@
  AUH_ottoman_debt_yes:0 "\n(§Y[AUH.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?AUH.opda_consumer_goods|.1%Y]"
  RUS_ottoman_debt_yes:0 "\n(§Y[RUS.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?RUS.opda_consumer_goods|.1%Y]"
  USA_ottoman_debt_yes:0 "\n(§Y[USA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods|.1%Y]"
+ TUR_ottoman_credit_national_bank:0 "Ottoman Credit National Bank"
+ TUR_ottoman_credit_national_bank_desc:0 "Among mostly foreign owned or controlled bank, Osmanlı İtibar-ı Milli Bankası stands as the first national bank that's working for the interests of our nation."
+ TUR_listian_protectionism:0 "Listian Protectionism"
+ TUR_listian_protectionism_desc:0 "Unrestricted foreign trade has prevented a national competition to develop. By imposing protectionist measures, we'll provide the necessary environment for our national companies to compete."
+ TUR_temporary_law_of_industrial_encouragement:0 "Temporary Law of Industrial Encouragement"
+ TUR_temporary_law_of_industrial_encouragement_desc:0 "As industrialization on its own will take far too long, our state will have to push for its development by passing measures that'll encourage industrialization."
+ TUR_anatolian_grain:0 "Anatolian Grain"
+ TUR_anatolian_grain_desc:0 "Anatolia with its untapped grain potential continues to fsacinate our politicians. If utilized correctly, we can end our reliance on foreign grain."
+ TUR_national_economy:0 "National Economy"
+ TUR_national_economy_desc:0 "Development of a national economy is directly linked to the survival and independence of our empire. If we want to compete with other European industrial powers, we have to start forming a national economy of our own."
+ TUR_war_agriculture:0 "War Agriculture"
+ TUR_war_agriculture_desc:0 "With the enaction of war agriculture, we'll divert a part of our workforce to work on the fields and help with the harvest, just to later confiscate that grain to feed our army."
+ TUR_decentralized_economy:0 "Decentralized Economy"
+ TUR_decentralized_economy_desc:0 "A decentralized economy model will let our each vilayets to develop their states independently without the hindrance of the central government."
+ TUR_liberalized_economy:0 "Liberalized Economy"
+ TUR_liberalized_economy_desc:0 "As our economy has been further liberalized, foreign investments as well as internal initiatives will increase and the economy of our empire will overall grow."
+ TUR_agrarian_economy:0 "Agrarian Economy"
+ TUR_agrarian_economy_desc:0 "Our empire already has a strong agrarian base. As we focus on the untapped potential of agriculture we already have, we'll be able to both feed our empire and sell the surplus to make a profit."
  TUR_lucrative_foreign_trade:0 "Lucrative Foreign Trade"
  TUR_lucrative_foreign_trade_desc:0 "Foreign trade in this state has proven to be a great improvement in increasing development."
  TUR_local_development:0 "Local Development"
