--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -264,7 +264,10 @@
  tur_savior_of_the_nation:0 "Savior of the Nation"
  TUR_ruthless_revanchist:0 "Ruthless Revanchist"
  TUR_ruthless_revanchist_leader:0 "Empowered Revanchist"
- TUR_butcher:0 "Butcher"
+ TUR_butcher:0 "Unforgiving Butcher"
+ TUR_unionist_minister:0 "Unionist Minister"
+ TUR_pragmatic_reformist:0 "Pragmatic Reformist"
+ TUR_pragmatic_reformist_leader:0 "Pragmatic Reformist"
  linchpin_of_infrastructure2:0 "Linchpin of Infrastructure"
  TUR_butcher_2:0 "Kasap Cemâl"
  TUR_civilian_front:0 "Civilian Front"
