--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -993,11 +993,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  frankfurt_conference:0 "Frankfurt Conference"
  frankfurt_conference_desc:0 "Politicians from the Central Powers are debating how to divide the defeated countries territories and colonies and expand their empires and hegemonies."
  frankfurt_treaty:0 " Frankfurt Treaty "
- kis_war:0 "The Great War\n"
- great_war_loser:0 "Defeat in the Great War\n"
- great_war_winner:0 "Victory in the Great War\n"
- interbellum:0 "Interbellum\n"
- great_war_ends:0 "The Great War has ended\n"
+ kis_war:0 "The §YGreat War§!"
+ great_war_loser:0 "Defeat in the §YGreat War§!"
+ great_war_winner:0 "Victory in the §YGreat War§!"
+ interbellum:0 "§YInterbellum§!"
+ great_war_ends:0 "The §YGreat War§! has ended"
  no_scripted_peace_warning_tt:0 "§RWarning: With this option, war truces will no longer be available, and any interwar content prepared will not work properly. This means you'll have to continue the war untill every enemy major countries has been defeated, accessing the vanilla peace conference.§!"
 
  pos_has_been_founded:0 "The Partido Obrero Socialista Has Been Founded\n"
