RAJ Decision and Focus Tree UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10440,7 +10440,7 @@ RAJ_reformism_desc:0 "As a result of the success of our boycott campaign, the Br
 RAJ_appease_the_radicals:0 "Appease the Radicals"
 RAJ_appease_the_radicals_desc:0 "Having used the Swadeshi tactics of the radicals within the Congress and gained significant reforms from the British, we are in a position to reintegrate Tilak and his clique within the Indian National Congress."
 RAJ_reconciliate_with_the_muslim_league:0 "Reconciliate with the Muslim League"
-RAJ_reconciliate_with_the_muslim_league_desc:0 ""
+RAJ_reconciliate_with_the_muslim_league_desc:0 "Founded in 1906, the Muslim League was born out of the perceived need of the Muslim Indian community to have a platform to be represented at the national level, similar to the Indian National Congress. For many years we worked in opposition because of the power struggles between the Muslim and Hindu communities within the Raj. Said infighting caused by our common overlord's 'divide and conquer' strategy. It is only through cooperation and partnership that we will be able to impose greater pressure on the British administration and create a new, fairer India."
 RAJ_home_rule_movement:0 "Home Rule Movement"
 RAJ_home_rule_movement_desc:0 ""
 RAJ_fight_for_the_empire:0 "Fight for the Empire"
