More historical focuses

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -22,6 +22,7 @@
  RUS_if_the_law_passes: "\nIf the law §Gpasses§!:"
  RUS_if_the_law_is_rejected: "\nIf the law is §Rrejected§!:"
  RUS_if_the_law_passes_in_sc: "\nIf the law §Gpasses§! in the §YState Council§!:"
+ RUS_if_the_law_passes_in_sd: "\nIf the law §Gpasses§! in the §YState Duma§!:"
 
  RUS_law_available_for_state_council: "The vote will be available in the §YState Council§!."
  RUS_law_has_to_be_passed_again: "The law has to be passed again in the §YState Duma§!.\n"
@@ -137,6 +138,7 @@
  RUS_great_army_programme_passed_in_sc: "Great Army Programme was passed in the State Council"
  RUS_increase_funding_for_agrarian_reform: "Increase funding for Agrarian Reform"
  RUS_increase_funding_for_education_reform: "Increase funding for Education Reform"
+ RUS_balanced_budget_sd: "Balanced Budget"
 
  #Reforms Decisions
 
@@ -235,6 +237,8 @@
  RUS_student_protests: "Student Protests"
  RUS_controlled_unions: "Controlled Unions"
  RUS_freedom_of_assembly: "Freedom of Assembly"
+ RUS_censorship_campaign: "Censorship Campaign"
+ RUS_balanced_budget: "Balanced Budget"
  RUS_outdated_railway_system: "Outdated Railway System"
  RUS_tsardom_of_poland: "Tsardom of Poland"
  RUS_tsardom_of_poland_1: "Tsardom of Poland"
@@ -269,10 +273,10 @@
  RUS_great_army_programme: "Great Army Programme"
  RUS_censor_liberal_press: "Censor Liberal Press"
  RUS_put_a_leash_on_okhranka: "Put a Leash on Okhranka"
- RUS_balanced_budget: "Balanced Budget"
+ RUS_balance_the_budget: "Balance the Budget"
  RUS_not_us_and_them: "Not "Us" and "Them""
  RUS_maklakovs_plan: "Maklakov's Plan"
- RUS_fate_of_the_kokovtsov: "Fate of Kokovtsov"
+ RUS_fate_of_the_government: "Fate of the Government"
  RUS_new_course: "New Course"
  RUS_drastic_measures: "Drastic Measures"
  RUS_complete_police_reform: "Complete Police Reform"
@@ -359,7 +363,7 @@
  ww1_russian_empire.13.t: "Law Failed in the State Council!"
  ww1_russian_empire.13.d: ""
  ww1_russian_empire.13.a: "Concerning"
- ww1_russian_empire.14.t: "Far Right Obstruction in the State Council!"
+ ww1_russian_empire.14.t: "Reactionary Obstruction in the State Council!"
  ww1_russian_empire.14.d: ""
  ww1_russian_empire.14.a: "They did what?!"
  ww1_russian_empire.15.t: "Law on Western Zemstvo Failed in the State Council!"
@@ -371,7 +375,7 @@
  ww1_russian_empire.16.b: "Who do you think you are threatening?!"
  ww1_russian_empire.17.t: "Stolypin Demands Temporary Dismissal of the Parliament"
  ww1_russian_empire.17.d: ""
- ww1_russian_empire.17.a: "The Far Right is at fault anyway, proceed"
+ ww1_russian_empire.17.a: "Reactionaries are at fault anyway, proceed"
  ww1_russian_empire.17.b: "Absolutely not"
  ww1_russian_empire.18.t: "Guchkov Resigns in Protest!"
  ww1_russian_empire.18.d: ""
@@ -403,6 +407,22 @@
  ww1_russian_empire.24.t: "New Interior Minister"
  ww1_russian_empire.24.d: ""
  ww1_russian_empire.24.a: "A man to tame the Duma"
+ ww1_russian_empire.25.t: "Leftist Protest in Duma"
+ ww1_russian_empire.25.d: ""
+ ww1_russian_empire.25.a: "We all need to reconcile..."
+ ww1_russian_empire.26.t: "Reactionaries Join the Protest"
+ ww1_russian_empire.26.d: ""
+ ww1_russian_empire.26.a: "What are they doing?!"
+ ww1_russian_empire.27.t: "When we forget the harmful “us” and “them”..."
+ ww1_russian_empire.27.d: ""
+ ww1_russian_empire.27.a: "...and we will simply say “we”"
+ ww1_russian_empire.28.t: "Maklakov's Plan"
+ ww1_russian_empire.28.d: ""
+ ww1_russian_empire.28.a: "Tsar seemed to approve"
+ ww1_russian_empire.29.t: "Our Future Course"
+ ww1_russian_empire.29.d: ""
+ ww1_russian_empire.29.a: "I couldn't agree more with Maklakov"
+ ww1_russian_empire.29.b: "Krivoshein's economic agenda is what we need"
 
  # State Duma and State Council
  RUS_parliament_title: "State Duma"
@@ -480,6 +500,7 @@
  minister_of_finance: ""
  minister_of_finance_tt: "§YMinister of Finance§!"
  agrarian_reform_buff_tt: "§GSlightly improves§! the effectiveness of our §YAgrarian Reform decisions§!"
+ police_reform_buff_tt: "§GSlightly improves§! the effectiveness of our §YPolice Reform decisions§!"
  war_minister: ""
  war_minister_tt: "§YWar Minister§!"
  reactionary: ""
