--- a/localisation/english/ww1_equip_air_l_english .yml
+++ b/localisation/english/ww1_equip_air_l_english .yml
@@ -413,8 +413,8 @@
  QIN_seaplane_equipment_1_short:0 "Tangen Seaplane"
  QIN_seaplane_equipment_2:0 "Mawei Type Jia-1" #1918
  QIN_seaplane_equipment_2_short:0 "Type Jia-1"
- QIN_fighter_equipment_1:0 "Vickers F.B 5 "Gunbus"" #1915
- QIN_fighter_equipment_1_short:0 "Vickers F.B 5"
+ QIN_fighter_equipment_1:0 "Beijing Nanyuan Aviation Training Insitute "Gunbus"" #1915
+ QIN_fighter_equipment_1_short:0 "BNATI Gunbus"
  QIN_fighter_equipment_2:0 "Shanghai Type Geng-1"
  QIN_fighter_equipment_2_short:0 "Type Geng-1"
  QIN_fighter_equipment_3:0 "Shanghai Type Geng-2" #1919
@@ -445,8 +445,8 @@
  CHI_seaplane_equipment_1_short:0 "Tangen Seaplane"
  CHI_seaplane_equipment_2:0 "Mawei Type Jia-1" #1918
  CHI_seaplane_equipment_2_short:0 "Type Jia-1"
- CHI_fighter_equipment_1:0 "Vickers F.B 5 "Gunbus"" #1915
- CHI_fighter_equipment_1_short:0 "Vickers F.B 5"
+ CHI_fighter_equipment_1:0 "Beijing Nanyuan Aviation Training Insitute "Gunbus"" #1915
+ CHI_fighter_equipment_1_short:0 "BNATI Gunbus"
  CHI_fighter_equipment_2:0 "Shanghai Type Geng-1"
  CHI_fighter_equipment_2_short:0 "Type Geng-1"
  CHI_fighter_equipment_3:0 "Shanghai Type Geng-2" #1919
