--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -177,6 +177,14 @@
  RUS_expansion_of_insurance_funds: "Expansion of Insurance Funds"
  RUS_insurance_funds_expanded: "Insurance Funds Expanded"
  RUS_famine_relief: "Famine Relief"
+ RUS_currently_building_a_railway: "Currently building a railway"
+ RUS_olonets_railway: "Build Olonets Railway"
+ RUS_murmansk_railway: "Build Murmansk Railway"
+ RUS_black_sea_railway: "Build Black Sea Railway"
+ RUS_omsk_railway: "Build Omsk Railway"
+ RUS_turksib: "Build Turksib"
+ RUS_semirechye_railway: "Build Semirechye Railway"
+ RUS_amur_railway: "Build Amur Railway"
 
  #Foreign Investments Decisions
 
