--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8364,32 +8364,39 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  NEP_war_with_SKK:0 "Invade [FROM.GetName]"
 
  # RAJ DECISION
-<<<<<<< Updated upstream
-RAJ_agencies_viceroy_executive_council:0 "Agencies vs Central Government "
-RAJ_agency_vs_viceroy:0 "Agencies vs Central Government"
+RAJ_agencies_viceroy_executive_council:0 "Princely States - Central Government\nPowerstruggle"
+RAJ_agency_vs_viceroy:0 "Princely States - Central Government\nPowerstruggle"
 RAJ_balance_agencies:0 "Agencies"
 RAJ_balance_bop:0 "Balanced"
- RAJ_agency:0 "Agency"
-heavy_agency:0 "Heavy Agency"
-agency_medium:0 "Agency Medium"
-agency_low:0 "Agency Low"
-viceroy_executive_council_high:0 "Central Government High"
-viceroy_executive_council_medium:0 "Central Government Medium"
-viceroy_executive_council_low:0 "Central Government Low"
-RAJ_princely_state_agency:0 "Princely States Agencies"
- RAJ_balance_viceroy_executive_council:0 "Viceroy Executive Council"
-RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council decisions"
-RAJ_viceroy_executive_council_category_desc:0 "Write or be raped"
-RAJ_you_can_repel.tt:0 "Taking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision"
-=======
-RAJ_agencies_viceroy_executive_council:0 "Agencies vs Viceroy Execuive Council "
+RAJ_agency:0 "Agency"
+heavy_agency:0 "Powerful Princely States Agencies"
+agency_medium:0 "Empowered Princely States Agencies"
+viceroy_executive_council_high:0 "Powerful Central Government"
+viceroy_executive_council_medium:0 "Empowered Central Government"
+RAJ_princely_state_agency:0 "Princely States"
+RAJ_balance_viceroy_executive_council:0 "Central Government"
+RAJ_agencies_viceroy_executive_council:0 "Princely States - Central Government\nPowerstruggle"
+
+RAJ_strengthen_the_central_gov:0 "Strengthen the Central Government"
+RAJ_strengthen_the_central_gov_desc:0 "The Viceroy's government has proven itself more than capable of handling national affairs, therefore we should expand its administrative influence."
+RAJ_expand_military_industry:0 "Expand Military Industry"
+RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
+RAJ_reformation_through_work:0 "Reformation through Work"
+RAJ_reformation_through_work_desc:0 "The Criminal Tribes Act allows us to detain any individual who's affiliated with one of the many ''Criminal tribes'' and reform them through labour camps. While the reformation doesn't actually help the ''Criminals'' emancipate themselves from their caste, it does provide free labour."
+RAJ_strengthen_the_agencies:0 "Strengthen the Agencies"
+RAJ_strengthen_the_agencies_desc:0 "The agencies that govern the various princely states throughout India have proved their ability to balance the autonomy of the princes with the objectives of the Raj, therefore we should expand their administrative influence."
+RAJ_concession_to_the_agencies:0 "Concession to the Agencies"
+RAJ_concession_to_the_agencies_desc:0 "A handful of agencies' governors have offered to bribe our administration into turning a blind eye while they violate some regulations. It's an offer we simply cannot refuse."
+RAJ_princely_investments:0 "Princely Investments"
+RAJ_princely_investments_desc:0 "The various princes who inhabit the Raj still possess considerable wealth. Encouraging them to invest in their fiefdom in exchange for minor concessions seems like a fair deal."
+RAJ_agency_infrastructure_effort:0 "Agency Infrastructure Effort"
+RAJ_agency_infrastructure_effort_desc:0 "While the territories directly under our administration have benefited from various investments over time, most of the Princely States remain backward areas. While investing in these territories would extend the Agency's influence, it would also improve the viability of these regions."
 
 
 
 RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
 RAJ_viceroy_executive_council_category_desc:0 "Established as an advisory council by the Regulating Act of 1773 and transformed into a functioning cabinet by the Indian Councils Act of 1861, the Viceroy's Executive Council is the effective government of the Raj, with each member having an assigned portfolio such as revenue, military, law, finance, home and public works. The Commander-in-Chief also sits on the Council as an extraordinary member.\n\nIf deemed necessary, the Viceroy is allowed to overrule the Council on affairs. The Indian Councils Act 1909, also known as the §YMorley-Minto Reforms§!, enabled the Viceroy to nominate one Indian member to the Executive Council, leading to the appointment of §YSatyendra Prasanna Sinha§! as the first Indian member.\n"
 RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
->>>>>>> Stashed changes
 RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
  organized_pacifism_category:0 "Organised Pacifism"
  organise_a_peaceful_protest_in_delhi:0 "Organise a Peaceful Protest in Delhi"
