--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2281,6 +2281,16 @@ ww1_chile.47.a:0 "POR LA RAZON O LA FUERZA!!"
 ww1_chile.48.t:0 "The Chilean Civil War"
 ww1_chile.48.d:0 "As Part Of Their New Nationalistic Government Programme, they've stripped the old castillian-basque oligarchy all of their priviliges,not following the santiago accords, in response, the oligarchy has revolted and chile is now involved in a civil war"
 ww1_chile.48.a:0 "Wow"
+ww1_chile.49.t:0 "Chile Is Involved In A Civil War"
+ww1_chile.49.d:0 "The old oligarchy has revolved against the new nationalist government in charge of the Generacion Del Centenario, a group of mad writers. their country is in chaos, and thats a good thing, its our chance to get our dear territories, lost in the war of the pacific"
+ww1_chile.49.a:0 "Take Them, its the opportunity we've been waiting for"
+ww1_chile.51.t:0 "Peru And Bolivia Take Control Their Old Territories"
+ww1_chile.51.d:0 "Peru And Bolivia Have Taken Control Of Their Old Teritories,they've taken advantage of our situation and have restored their pre-1879 territories, no more advance has been reported"
+ww1_chile.51.a:0 "FUCK, HOLY HOLY FUCK"
+ww1_chile.52.t:0 "The 2nd War Of The Pacific"
+ww1_chile.52.d:0 "Peru And Bolivia had Taken Control Of Their Old Teritories in the Chilean Civil War,and,of course, the chilean state has responded, a new war has unleashed in the americas"
+ww1_chile.52.a:0 "will This Become a 4th Scenario For The Great War"
+
 
 
 
