--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2280,6 +2280,22 @@ CHL_recall_old_officers:0 "Recall Old Officers"
 CHL_state_ateismo_tt:0 "§YCareful§Y.§Yyou§Y §Ymight§Y §Yget blacklash§Y §Yfrom§Y §Ythe§Y §YCatholic§Y §9Unions!§Y"
 CHL_fiscalrailways_tt:0 "§YFor this focus yo yake effect you must have asigned the Empresa De Ferrocarriles Del Estado as your Industrial Concern§Y"
 expelling:0 "Expelling A Kind Of "People""
+CHL_they_ve_taken_them_back:0 "They've Taken Them Back"
+CHL_they_ve_taken_them_back_desc:0 ""
+CHL_we_will_fight_them_again:0 "We Will Fight For Them Again"
+CHL_we_will_fight_them_again_desc:0 ""
+CHL_veteran_circles:0 "Veteran Circles"
+CHL_veteran_circles_desc:0 ""
+CHL_mobilization:0 "Mobilization"
+CHL_mobilization_desc:0 ""
+CHL_prepare_the_naval_blockade:0 "Prepare The Naval Blockade"
+CHL_prepare_the_naval_blockade_desc:0 ""
+CHL_against_the_odds_once_again:0 "Against The Odds Once Again"
+CHL_against_the_odds_once_again_desc:0 ""
+CHL_the_second_war_of_the_pacific:0 "The Second War Of The Pacific"
+CHL_the_second_war_of_the_pacific_desc:0 ""
+CHL_Accept_our_fate:0 "Accept Our Fate"
+CHL_Accept_our_fate_desc:0 ""
 
  GER_weltpolitik:0 "Weltpolitik"
  GER_weltpolitik_desc:0 "We must enforce our Kaiser's divine right to rule over our Empire. He will lead us and the Empire towards glory!"
