--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -699,6 +699,13 @@
  TUR_azerbaijani_cooperation:0 "£ww1_flag_AZR  Azerbaijani Cooperation"
  TUR_azerbaijani_cooperation_desc:0 "Among all the minorities, this state is populated mostly by Azerbaijanis. This results in an overall increased opinion of us by the locals and gives us an easier time with ruling these lands."
  TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n"
+ TUR_autonomous_vilayet:0 "Autonomous Vilayet"
+ TUR_autonomous_vilayet_desc:0 "Autonomous vilayets restrict our access to the states factories and resources yet provides us with increased local compliance and stability.
+ TUR_semi_autonomous_vilayet:0 "Semi-Autonomous Vilayet"
+ TUR_semi_autonomous_vilayet_desc:0 "Semi-autonomous vilayets partly restrict our access to the states factories and resources yet provides us with slightly increased local compliance and stability."
+ TUR_martial_law:0 "Martial Law"
+ TUR_martial_law_desc:0 "This state is currently under martial law. Apart from maintaining public order, the state of martial law also allows us to surpress political enemies and implement laws faster."
+ TUR_martial_law_tt:0 "Occupation law §YMartial Law§! could be assigned to state.\n"
 
  TUR_economic_etatism:0 "Etatism"
  TUR_economic_etatism_desc:0 "It seems that foreign investments and liberal open market economy has only increased our foreign dependency. From now on, our empire needs to introduce strict means to control its economy."
@@ -734,8 +741,6 @@
  TUR_pushing_for_rome:0 "Pushing for Rome"
  TUR_neutrality_for_recovery:0 "Neutrality for Recovery"
  TUR_encouraged_education:0 "Encouraged Education"
- TUR_autonomous_vilayet:0 "Autonomous Vilayet"
- TUR_semi_autonomous_vilayet:0 "Semi-Autonomous Vilayet"
  reformed_mecelle:0 "Reformed Mecelle"
  secular_civil_code:0 "Secular Civil Code"
  autonomous_civil_code:0 "Autonomous Civil Code"
@@ -887,8 +892,6 @@
  TUR_guaranteed_freedom_of_speech:0 "Guaranteed Freedom of Speech"
  TUR_guaranteed_human_right:0 "Guaranteed Human Rights"
  TUR_limited_speech:0 "Restricted Personal Rigths and Freedoms"
- TUR_autonomous_vilayets:0 "Autonomous Vilayets"
- TUR_limited_autonomous_vilayets:0 "Limited Autonomous Vilayets"
  TUR_workers_culture:0 "Worker's Culture"
  TUR_sick_man_of_europe:0 "Sick Man of Europe"
  TUR_sick_man_of_europe_desc:0 "The fading Ottoman Empire experienced major political and economic shock in recent decades. Losing its influence on the distant regions of the country and sinking into debt, the Empire received the insulting nickname of the Sick Man of Europe."
