--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -995,6 +995,7 @@
  TUR_listian_protectionism_desc:0 "Unrestricted foreign trade has prevented a national competition to develop. By imposing protectionist measures, we'll provide the necessary environment for our national companies to compete."
  TUR_temporary_law_of_industrial_encouragement:0 "Temporary Law of Industrial Encouragement"
  TUR_temporary_law_of_industrial_encouragement_desc:0 "As industrialization on its own will take far too long, our state will have to push for its development by passing measures that'll encourage industrialization."
+ TUR_temporary_law_of_industrial_encouragement_instant_desc:0 "§RWill be removed if has more than 35 factories§!\nGain §Y30 Political Power§! upon removal"
  TUR_anatolian_grain:0 "Anatolian Grain"
  TUR_anatolian_grain_desc:0 "Anatolia with its untapped grain potential continues to fsacinate our politicians. If utilized correctly, we can end our reliance on foreign grain."
  TUR_national_economy:0 "National Economy"
