prime minister Napoleon for interwar AF victory

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7346,6 +7346,15 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_interwar_ENG_rupture:0 "Rupture"
  FRA_interwar_ENG_rupture_desc:0 "We cannot trust Great Britain and her Dominions. We must cease all cooperation with our old rival, now that Germany is neutralized."
 
+ FRA_congratulate_the_king:0 "[FRA_congratulate_the_king]"
+ FRA_congratulate_the_king_jean_iii:0 "Congratulate Jean III"
+ FRA_congratulate_the_king_napoleon_v:0 "Congratulate Napoléon V"
+ FRA_congratulate_the_king_jacques_i:0 "Congratulate Jacques I"
+
+ FRA_congratulate_the_king_desc:0 "The help of the noblest house of Europe was essential in the unification of all French people, poor or rich, intellectual or proletarian. Our victory in the Great War must motivate us to consider the question of a form of restorationism, for the good of the unity of the French around a strong and national figure."
+
+
+
  FRA_interwar_rural_investments:0 "Rural Investments"
  FRA_interwar_rural_investments_desc:0 "The budget surplus caused by the payment of German reparations makes it possible to revitalize our rural economy and revive our heavy industry."
  FRA_ww1_memel_occupation:0 "Withdraw from Memelland?"
