--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -29,7 +29,9 @@
  neutrality:0 "Authoritarian"
  neutrality_noun:0 "Authoritarianism"
  neutrality_desc:0 "Authoritarian Regime"
+
  #TGWR
+
  autocracy:0 "Absolute Monarchy"
  autocracy_desc:0 "An absolute monarchy is a form of government in which a single person—usually a king or queen—holds absolute, autocratic power. In absolute monarchies, the succession of power is typically hereditary, with the throne passing among members of a ruling family."
  semi_constitutional_monarchy:0 "Semi-Constitutional Monarchy"
@@ -46,7 +48,9 @@
  theocracy_ideology_desc:0 "Theocracy is a form of government in which God or a deity of some type is recognized as the supreme ruling authority, giving divine guidance to human intermediaries that manage the day to day affairs of the government."
  anarcho_primitivism:0 "Anarcho-Primitivism"
  anarcho_primitivism_desc:0 "Anarcho-Primitivism is an anarchist critique of the origins and progress of civilization. An offshoot of Ted Kaczynski's school of thought, anarcho-primitives seek to reverse humanity back in progress and advancement, due to reasons involving mass psychological anguish of modern society along with large ecological and environmental damage."
+ 
  #Proto-Fascism
+
  stratocracy:0 "Stratocracy"
  stratocracy_desc:0 "A stratocracy is a system of governance where the military exerts substantial control over aspects of society and the politics of a nation. Stratocracies are often emergency governments where the military is put in command to restore order, but it is also seen by few as a guiding principle for those who believe of a strong nation and state."
  fundamentalism:0 "Fundamentalism"
@@ -57,13 +61,19 @@
  ittihadism_desc:0 "İttihatism is an ideology characterized by nationalism and the belief in advanced technology as a source of national power. It is accompanied by Social Darwinism and scientific racism, as well as advocacy for social modernisation and westernisation. İttihatists were inspired by French scientist Gustave Le Bon and German General Baron Colmar von der Goltz, who promoted rule by a scientific elite and militarism. The Ottoman Empire is seen as the leader of all Muslims led by the "Turkish race"."
  revolutionary_nationalism:0 "Revolutionary Nationalism"
  revolutionary_nationalism_desc:0 "Revolutionary nationalism, also known as radical nationalism, is an ideological theory that calls for a national community united by a shared sense of purpose and destiny."
+ 
  #Socialism
+
  vanguardism:0 "Vanguardism"
- vanguardism_desc:0 "A political ideology based in Marxist thought, Vanguardism seeks to establish a socialist state by a vanguard party leading a revolution overthrowing capitalist society. Once in power, the party rules through a system whereby policies are open for internal debate until a decision has been made."
+ vanguardism_desc:0 "Vanguardism is a revolutionary socialist doctrine, which states that the best way to conduct the social revolution is through the revolutionary action of the class-conscious sections of the working class. It advocates for the formation of the revolutionary party, which would violently seize the political power and advance socialism by the dictatorial means of the socialist state."
  has_government_vanguardism_tt:0 "Current ruling party is §YVanguardist§!"
  has_government_vanguardism_tt_NOT:0 "Current ruling party is not §YVanguardist§!"
+ revolutionary_socialism:0 "Revolutionary Socialism"
+ revolutionary_socialism_desc:0 "Revolutionary Socialism is a socialist doctrine, which states that no structural change to society can be done without the social revolution. It advocates for the immediate seizure of power from capilatists by the mass movement of the working class, regardless of whether such act would be violent or not."
  reformist_socialism:0 "Reformist Socialism"
- reformist_socialism_desc:0 "Believing the revolutionary rhetoric of many socialist and Marxist circles to be counterproductive, reformist socialism believes that the establishment of socialism should be done through the gradual reformation of existing institutions."
+ reformist_socialism_desc:0 "Reformist Socialism is a socialist doctrine, which rejects the necessity of social revolution to achieve socialist society. It advocates for gradual changes through existing institutions, which would eventually fundamentally transform the capitalist system."
+ anarchism:0 "Anarchism"
+ anarchism_desc:0 "Anarchism is an idea and a movement which believe that any form of authority is inherently oppressive. As such, they advocate for abolition of the institutions which maintain unnecessary hierarchy, such as state and capitalist system, and advocate for a classless society."
  anarchist_communism:0 "Anarchist Communism"
  anarchist_communism_desc:0 "An ideology embracing the idea of communism as a stateless society, anarchist communism eschews the idea of a transitionary socialist state and favors a society based on voluntary associations and mutual aid."
  syndicalism:0 "Syndicalism"
@@ -76,7 +86,9 @@
  market_socialism_desc:0 "Market socialism refers to various economic systems where the means of production are either publicly owned or cooperatively owned and operated for a profit in a market economy. The fundamental difference between market socialism and a traditional socialist economy is the existence of a market for the means of production and capital goods."
  religious_communism:0 "Religious Socialism"
  religious_communism_desc:0 "Religious socialism is a branch of socialism that includes religious principles and thought into its creed. Believing that religion and socialism are compatible, religious socialism rejects the notion of atheism."
- #democrats
+ 
+ #Democratic
+
  liberal_conservatism:0 "Liberal Conservativism"
  liberal_conservatism_desc:0 "Liberal conservatism is a political ideology combining conservative policies with liberal stances, especially on economic issues but also on social matters, representing a brand of political conservatism strongly influenced by liberalism. The ideology incorporates the classical-liberal view on economic interventionism, according to which individuals should be free to participate in the market and generate wealth without government interference. However, liberal conservatives also hold that individuals cannot be thoroughly depended on to act responsibly in other spheres of life; therefore, they believe that a strong state is necessary to ensure law and order and that institutions are needed to nurture a sense of duty and responsibility to one's family and one's nation. They also support civil liberties, along with some socially conservative positions."
  classical_liberalism:0 "Classical Liberalism"
