Parliment and Pan-German Party Name

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -91,8 +91,7 @@
  libertarianism_desc:0 "Libertarianism is a philosophy advocating to maximise individual freedoms in a political and economic context. Libertarianism deems it necessary for the government and state authority reduced merely to preserve the functioning of the nation and society, as otherwise the state would seek to intrude on liberty and the individual. Libertarians often call for the removal of government intervention in the economy through the establishment of Laissez-Faire capitalism."
 
 
- GER_fascism_party:0 "OHL"
- GER_fascism_party_long:0 "Oberste Heeresleitung"
+ GER_fascism_party:0 "Alldeutscher Verband"
  GER_fascism_party_volkisch:0 "Völkische Bewegung"
  GER_fascism_party_DAP:0 "DAP"
  GER_fascism_party_DAP_long:0 "Deutsche Arbeiterpartei"
