--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1271,7 +1271,7 @@
  FRA_emile_pouget:0 "Émile Pouget"
  FRA_paul_painleve:0 "Paul Painlevé"
  FRA_georges_clemenceau:0 "Georges Clemenceau"
- FRA_napoleon_v:0 "Napoléon V"
+ FRA_napoleon_v:0 "Victor Napoléon Bonaparte"
  FRA_napoleon_vi:0 "Napoléon VI"
  FRA_philippe_viii:0 "Philippe VIII"
  FRA_jean_iii:0 "Jean III"
