--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -435,4 +435,6 @@
  oil_baron: "Oil Baron"
  MON_spiritual_leader:0 "Jebtsundamba Khutuktu"
  melanchonic_king:0 "Melanchonic King"
+ charismatic_prime_minister:0 "Charismatic Prime Minister"
+ bonaparte_legacy:0 "Bonaparte Legacy"
  
